<resources>
    <string name="app_name">Supercarrito</string>
    <string name="opciones">Opciones</string>
    <string name="aniadir_productos">Añadir productos</string>
    <string name="comprado">Comprado</string>
    <string name="aniadir_text">Añadir</string>
    <string name="usuario">Usuario</string>
    <string name="mis_listas">Mis listas</string>
    <string name="super_carrito">SuperCarrito</string>
    <string name="fab_text">Añadir listas de la compra</string>
    <string name="acceder">Acceder</string>
    <string name="email_logueo">Introduzca un email</string>
    <string name="contrasenia_logueo">Introduzca la contraseña</string>
    <string name="supercarrito_logueo">SuperCarrito: Listas de la compra</string>
    <string name="lista_personal">Lista personal</string>
    <string name="grupo_de_compra">Grupo de compra</string>
    <string name="aniadir">Añadir</string>
    <string name="nombreproducto">nombreproducto</string>
    <string name="nombresuper">nombresuper</string>
    <string name="registrar">Registrar</string>
    <string name="nombreLista">Nombre Lista</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_lista_productos">lista_productos</string>
    <string name="nickCompartir">Nick para compartir lista</string>


    <string name="prefs_file">com.example.accesoconcorreo.PREFERENCE_FILE_KEY</string>
    <string name="nick">Introduzca su nick</string>
    <string name="introduzca_usuario_a_aniadir">Introduzca usuario a añadir</string>
    <string name="seguir">Seguir añadiendo</string>
    <string name="supercarrito">Supercarrito</string>

    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="tipo_sol">Tipo de solicitud</string>
    <string name="remitente">usuario</string>
    <string name="productos">Productos</string>
    <string name="supermercados">Supermercados</string>
    <string name="opciones_añadir_miembros">Añadir miembros</string>

    <string-array name="supers_array">
        <item>Mercadona</item>
        <item>Eroski</item>
        <item>Lidl</item>
        <item>Alcampo</item>
        <item>Aldi</item>
        <item>Lupa</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduzca_nick_usuario">Introduzca el nick de un usuario</string>

</resources>