<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:id="@+id/nom_lista">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:fontFamily="@font/baloo"
        android:hint="@string/nombreLista"
        android:inputType="textLongMessage"
        android:padding="6dp"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="67dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:fontFamily="@font/baloo"
                android:text="@string/aceptar"
                android:textSize="18sp"
                app:cornerRadius="20sp" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="2"
                android:fontFamily="@font/baloo"
                android:text="@string/cancelar"
                android:textSize="18sp"
                app:cornerRadius="20sp" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>