<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fichaProdToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        app:layout_constraintBottom_toBottomOf="@+id/btnAcceder"
        app:layout_constraintEnd_toStartOf="@+id/btnAcceder"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnAcceder"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView_logosuper"
        android:layout_width="161dp"
        android:layout_height="121dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/supercarrito_logueo"
        android:src="@mipmap/carro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fichaProdToolbar" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_logueo"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:backgroundTint="@color/naranja_tipo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logosuper" />

    <EditText
        android:id="@+id/editText_contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrasenia_logueo"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:backgroundTint="@color/naranja_tipo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <Button
        android:id="@+id/btnAcceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:text="@string/acceder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_contrasenia" />

    <ImageView
        android:id="@+id/imageView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/email_logueo"
        android:src="@drawable/ic_persona_black"
        app:layout_constraintBottom_toBottomOf="@+id/editText_email"
        app:layout_constraintEnd_toStartOf="@+id/editText_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_email" />

    <ImageView
        android:id="@+id/imageView_contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contrasenia_logueo"
        android:src="@drawable/ic_candado_black"
        app:layout_constraintBottom_toBottomOf="@+id/editText_contrasenia"
        app:layout_constraintEnd_toStartOf="@+id/editText_contrasenia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_contrasenia" />

    <ImageButton
        android:id="@+id/imageButton_mostrarC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:backgroundTint="@color/naranja_fondo"
        android:src="@drawable/ic_ojo_negro"
        app:layout_constraintBottom_toBottomOf="@+id/editText_contrasenia"
        app:layout_constraintStart_toEndOf="@+id/editText_contrasenia"
        app:layout_constraintTop_toTopOf="@+id/editText_contrasenia" />

    <Button
        android:id="@+id/login_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/ic_google_logo"
        android:text="GOOGLE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAcceder"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar"
        app:layout_constraintVertical_bias="0.483"
        android:drawableLeft="@mipmap/ic_google_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
    <!-- -->