<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_producto_super"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/Linear_producto_entero"
        android:layout_width="130dp"
        android:layout_height="181dp"
        android:orientation="vertical"
        android:padding="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnAniadirProd"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:text="@string/aniadir"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/fotoproducto_super"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_producto" />

            <LinearLayout
                android:id="@+id/linear_datoProductos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fotoproducto_super"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical"
                android:padding="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fotoproducto_super"
                app:layout_constraintVertical_bias="0.673"
                tools:layout_editor_absoluteX="0dp">

                <TextView

                    android:id="@+id/nombre_producto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombreproducto"
                    android:textSize="12sp" />

                <TextView

                    android:id="@+id/super_producto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombresuper"
                    android:textSize="12sp" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
